@@ -134,9 +134,9 @@ public class Andie {
 
                 // Making preferences and locale
                 Preferences p = Preferences.userNodeForPackage(Andie.class);
-                Locale.setDefault(new Locale(p.get("language", "en"), p.get("country", "NZ")));
-                // Locale en_NZ = Locale.of("en", "NZ");
-                // Locale.setDefault(en_NZ);
+                Locale.setDefault(new Locale(p.get("language", "en"), p.get("country", "EN")));
+                //Locale en_NZ = Locale.of("en", "NZ");
+                //Locale.setDefault(en_NZ);
 
                 // Now making the ResourceBundle
                 ResourceBundle bundle = ResourceBundle.getBundle("cosc202/andie/MessageBundle");
